--- a/GeniusIdiotConsoleApp/GeniusIdiotConsoleApp.csproj
+++ b/GeniusIdiotConsoleApp/GeniusIdiotConsoleApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="NuGet.Packaging" Version="6.11.0" />
   </ItemGroup>
 
   <ItemGroup>
